<resources>
    <string name="app_name">Chen Woo Fishery\nManagement System</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="lupa_password">Lupa Password ?</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="tracking_product">Tracking Product</string>
    <string name="load_to_container">Load To Container</string>
    <string name="update_product">Packing Product</string>
    <string name="cancel_loading">Cancel Loading</string>
    <string name="keluar_aplikasi">Keluar Aplikasi</string>
    <string name="data_tracking">Data Tracking</string>
    <string name="data_packing">Data Packing</string>
    <string name="trackcode">Trackcode</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="batch_number">Batch Number</string>
    <string name="berat_bersih">Berat Bersih</string>
    <string name="nomer_penjualan">No. Penjualan</string>
    <string name="jumlah_pcs">Jumlah Pcs</string>
    <string name="error_coba_lagi">Coba Lagi</string>
    <string name="nomor_po">Nomor PO</string>
    <string name="nomor_invoice">Nomor Invoice</string>
    <string name="nama_supplier">Nama Supplier</string>
    <string name="nomor_nota_timbang">Nomor Nota Timbang</string>
    <string name="tanggal_produksi">Tanggal Produksi</string>
    <string name="nama_pembeli">Nama Pembeli</string>
    <string name="tanggal_pengiriman">Tanggal Pengiriman</string>
    <string name="shipped_by">Shipped By</string>
    <string name="save_setting">Simpan</string>
    <string name="setting">Setting</string>
    <string name="data_not_found">Data not Found</string>
    <string name="packet_already_load">Paket Sudah di Load ke Kontainer</string>
    <string name="login_failed">Login Failed. Try Again!</string>
    <string name="detail_data">Detail Data</string>
    <string name="isi_data_packing">Isi Data Packing</string>
    <string name="cari_batch_number">Cari Batch Number</string>
    <string name="kg">Kg</string>
    <string name="berat_kotor">Berat Kotor</string>
    <string name="jumlah_potongan">Jumlah Potongan</string>
    <string name="pcs">Pcs</string>
    <string name="data_berhasil_diupdate">Data Berhasil Diubah</string>
    <string name="data_gagal_diubah">Data Gagal Diubah</string>
    <string name="fitur_belum_tersedia">Fitur Belum Tersedia</string>
    <string name="pilih_nama_produk">-Pilih Nama Produk-</string>
    <string name="pilih_nomor_penjualan">-Pilih Nomor Penjualan-</string>
    <string name="pilih_batch_number">-Pilih Batch Number-</string>
    <string name="version">Version: 1.9</string>


</resources>
