<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_login"
    android:fitsSystemWindows="true"
    tools:context="com.example.david.chenwoo.LoginActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_logo" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_logo"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/cffffff" />


    <EditText
        android:paddingEnd="50dp"
        android:paddingStart="10dp"
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/tv_app_name"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:background="@drawable/bg_username"
        android:hint="@string/username"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/et_username"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:paddingEnd="50dp"
        android:paddingStart="10dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:background="@drawable/bg_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="15sp" />


    <Button
        android:id="@+id/b_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="70dp"
        android:background="@color/c338733"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/masuk"
        android:textColor="@color/cffffff" />

    <Button
        android:id="@+id/b_lupa_password"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="422dp"
        android:background="@color/c00ffffff"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/lupa_password"
        android:textAllCaps="false"
        android:textColor="@color/cffffff" />

    <com.victor.loading.rotate.RotateLoading
        android:id="@+id/rotateloading"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        app:loading_color="@color/c0091EF"
        app:loading_width="5dp" />



    <ImageButton
        android:id="@+id/b_setting"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:background="@drawable/ic_setting"
        android:gravity="center" />

    <TextView
        android:layout_alignParentBottom="true"
        android:textSize="10sp"
        android:layout_margin="10dp"
        android:text="@string/version"
        android:textColor="@color/cffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
