<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/bg_item_data_packing"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_batch_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/c0091EF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_isi_data_packing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isi_data_packing"
        android:textColor="@color/c0091EF"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_cari_batch_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cari_batch_number" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_edit_text_update"
            android:paddingBottom="0dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="0dp">

            <Spinner
                android:id="@+id/s_batch_number"
                android:layout_width="match_parent"
                android:spinnerMode="dialog"
                android:layout_height="30dp"
                android:layout_marginTop="5dp" />

        </FrameLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_berat_bersih"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/berat_bersih" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_berat_bersih"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.6"
                android:background="@drawable/bg_edit_text_update"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:paddingBottom="0dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="0dp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.1" />

            <Button
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.3"
                android:background="@drawable/bg_edit_text_update"
                android:padding="0dp"
                android:text="@string/kg"
                android:textAllCaps="false" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_berat_kotor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/berat_kotor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_berat_kotor"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.6"
                android:background="@drawable/bg_edit_text_update"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:paddingBottom="0dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="0dp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.1" />

            <Button
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.3"
                android:background="@drawable/bg_edit_text_update"
                android:padding="0dp"
                android:text="@string/kg"
                android:textAllCaps="false" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_jumlah_potongan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jumlah_potongan" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_jumlah_potongan"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.6"
                android:background="@drawable/bg_edit_text_update"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLines="1"
                android:paddingBottom="0dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="0dp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.1" />

            <Button
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.3"
                android:background="@drawable/bg_edit_text_update"
                android:padding="0dp"
                android:text="@string/pcs"
                android:textAllCaps="false" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>