<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/c0091EF">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/data_packing"
            android:textColor="@color/cffffff"
            android:textSize="30sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_wrapper_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_white_shadow"
        android:orientation="vertical"
        android:paddingBottom="40dp"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:paddingTop="10dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_detail_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_data"
                android:textColor="@color/c0091EF"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:textSize="14sp"
                    android:id="@+id/tv_title_trackcode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/trackcode"
                    android:textColor="@color/c888888" />

                <TextView
                    android:textSize="14sp"
                    android:layout_marginStart="5dp"
                    android:id="@+id/tv_trackcode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/c47525D" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:textSize="14sp"
                    android:id="@+id/tv_title_nomer_penjualan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nomer_penjualan"
                    android:textColor="@color/c888888" />

                <FrameLayout
                    android:background="@drawable/bg_border_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Spinner
                        android:paddingStart="2dp"
                        android:spinnerMode="dialog"
                        android:textSize="14sp"
                        android:id="@+id/s_nomer_penjualan"
                        android:layout_width="match_parent"
                        android:layout_height="40dp" />

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:textSize="14sp"
                    android:id="@+id/tv_title_nama_produk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_produk"
                    android:textColor="@color/c888888" />

                <FrameLayout
                    android:background="@drawable/bg_border_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Spinner
                        android:paddingStart="2dp"
                        android:spinnerMode="dialog"
                        android:textSize="14sp"
                        android:id="@+id/s_nama_produk"
                        android:layout_width="match_parent"
                        android:layout_height="40dp" />

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_data_packing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
               />

            <Button
                android:layout_margin="10dp"
                android:background="@drawable/bg_add_btn"
                android:id="@+id/b_add"
                android:text="+"
                android:padding="0dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_width="40dp"
                android:layout_height="40dp" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <!--<ImageButton-->
            <!--android:id="@+id/ib_simpan"-->
            <!--android:layout_width="80dp"-->
            <!--android:layout_height="80dp"-->
            <!--android:layout_marginBottom="20dp"-->
            <!--android:background="@drawable/ic_save" />-->

        <ImageButton
            android:id="@+id/ib_simpan_plus"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/ic_save" />
    </LinearLayout>

    <com.victor.loading.rotate.RotateLoading
        android:id="@+id/rotateloading"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        app:loading_color="@color/c0091EF"
        app:loading_width="5dp" />

</RelativeLayout>